2011-04-27  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        [chromium] add a build target to make a zip file with the inspector debug files
        https://bugs.webkit.org/show_bug.cgi?id=56656

        * WebKit.gyp: Add target
        * scripts/concatenate_css_files.py: Pass in a string of html rather
            than a filename
        * scripts/concatenate_js_files.py: Same as above
        * scripts/generate_devtools_html.py: Refactor main into a helper function
        * scripts/generate_devtools_zip.py: Added.

2011-04-27  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Eric Seidel.

        Frame.h shouldn't include Document.h
        https://bugs.webkit.org/show_bug.cgi?id=59560
        
        Add Document.h #includes for files that were relying on transitive
        #includes via Frame.h.

        * src/LocalFileSystemChromium.cpp:
        * src/StorageEventDispatcherImpl.cpp:
        * src/WebFrameImpl.h:
        * src/WebWorkerBase.cpp:

2011-04-26  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by Eric Seidel.

        Typedefing the shared timer function.
        https://bugs.webkit.org/show_bug.cgi?id=59564

        * public/WebKitClient.h:
        (WebKit::WebKitClient::setSharedTimerFiredFunction):

2011-04-26  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, rolling out r84982.
        http://trac.webkit.org/changeset/84982
        https://bugs.webkit.org/show_bug.cgi?id=59558

        re-land r84951

        * WebKit.gyp:
        * public/WebFrame.h:
        * public/WebWidget.h:
        * public/mac/WebSubstringUtil.h: Added.
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::firstRectForCharacterRange):
        (WebKit::WebFrameImpl::characterIndexForPoint):
        * src/WebFrameImpl.h:
        * src/WebPopupMenuImpl.cpp:
        (WebKit::WebPopupMenuImpl::compositionRange):
        (WebKit::WebPopupMenuImpl::caretOrSelectionRange):
        * src/WebPopupMenuImpl.h: