@@ -1,3 +1,12 @@
+2011-04-27  Dirk Pranke  <dpranke@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        remove unneeded TestWebWidget class
+        https://bugs.webkit.org/show_bug.cgi?id=59573
+
+        * tests/PopupMenuTest.cpp:
+
 2011-04-27  Tony Chang  <tony@chromium.org>
 
         Reviewed by Ojan Vafai.
